decompiler/tests/snapshots/test_tool__x86_64_callconv__func013.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  59 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r46: TypeID(2v1) <- Part { src: r45, offset: 0, size: 8 }
   45 r47: TypeID(2v1) <- Part { src: r28, offset: 8, size: 56 }
   46 r28: TypeID(2v1) <- Concat { lo: r46, hi: r47 }
   47 r48: TypeID(2v1) <- Part { src: r45, offset: 8, size: 8 }
   48 r49: TypeID(2v1) <- Part { src: r29, offset: 8, size: 56 }
   49 r29: TypeID(2v1) <- Concat { lo: r48, hi: r49 }
0x401138:
   50 r46: TypeID(2v1) <- Part { src: r29, offset: 0, size: 16 }
   51 r47: TypeID(2v1) <- Part { src: r28, offset: 16, size: 48 }
   52 r28: TypeID(2v1) <- Concat { lo: r46, hi: r47 }
0x40113b:
   53 r45: TypeID(2v1) <- Void
   54 r46: TypeID(2v1) <- Part { src: r28, offset: 0, size: 8 }
   55 r45: TypeID(2v1) <- Concat { lo: r45, hi: r46 }
   56 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 8 }
   57 r47: TypeID(2v1) <- SetReturnValue(r45)
   58 r47: TypeID(2v1) <- Control(Ret)


 --- ssa pre-xform
ssa program  59 instrs
.B0:    ;;  → Always(Return).
         r27: ? <- Ancestral(AncestralName("ZMM0"))
         r28: ? <- Ancestral(AncestralName("ZMM1"))
  (  2)  r43: ? <- Ancestral(AncestralName("arg0"))
         r44: ? <- Part { src: r43, offset: 0, size: 8 }
         r45: ? <- Part { src: r27, offset: 8, size: 56 }
         r46: ? <- Concat { lo: r44, hi: r45 }
         r47: ? <- Part { src: r43, offset: 8, size: 8 }
         r48: ? <- Part { src: r28, offset: 8, size: 56 }
         r49: ? <- Concat { lo: r47, hi: r48 }
         r50: ? <- Part { src: r49, offset: 0, size: 16 }
         r51: ? <- Part { src: r46, offset: 16, size: 48 }
         r52: ? <- Concat { lo: r50, hi: r51 }
         r54: ? <- Part { src: r52, offset: 0, size: 8 }
         r55: ? <- Concat { lo: r53, hi: r54 }
         r56: ? <- Part { src: r55, offset: 0, size: 8 }
         r57: ? <- SetReturnValue(r56)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r43, r56, r57]
  domtree:
    
 --- ssa
ssa program  59 instrs
.B0:    ;;  → Always(Return).
         r43: ? <- Ancestral(AncestralName("arg0"))
         r56: ? <- Part { src: r43, offset: 8, size: 8 }
         r57: ? <- SetReturnValue(r56)


 --- ast

T0: {
  ;
  return pre:arg0[16 .. 8]
}
