decompiler/tests/snapshots/test_tool__x86_64_callconv__func018.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func018 0x401165+5 (file 0x1165)
          401165: 8a 44 24 20             mov al,[rsp+20h]
          401169: c3                      ret

function type: "func018" func (arg0 big <TypeID(795v1)>) uint8_t <TypeID(789v1)>
WARNING: 1 errors; only 0 out of 1 parameters could be mapped to registers and stack slots
  #0: type has no alignment?
0 warnings.


mil program = 
program  53 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
0x401165:
   43 r46: TypeID(2v1) <- Const { value: 32, size: 8 }
   44 r46: TypeID(2v1) <- Arith(Add, r46, r12)
   45 r45: TypeID(2v1) <- LoadMem { addr: r46, size: 1 }
   46 r47: TypeID(2v1) <- Part { src: r16, offset: 1, size: 7 }
   47 r16: TypeID(2v1) <- Concat { lo: r45, hi: r47 }
0x401169:
   48 r45: TypeID(2v1) <- Void
   49 r45: TypeID(2v1) <- Concat { lo: r45, hi: r16 }
   50 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 1 }
   51 r47: TypeID(2v1) <- SetReturnValue(r45)
   52 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  53 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r15: ? <- Ancestral(AncestralName("RAX"))
         r43: ? <- Const { value: 32, size: 8 }
         r44: ? <- Arith(Add, r43, r11)
         r45: ? <- LoadMem { addr: r44, size: 1 }
         r46: ? <- Part { src: r15, offset: 1, size: 7 }
         r47: ? <- Concat { lo: r45, hi: r46 }
         r49: ? <- Concat { lo: r48, hi: r47 }
         r50: ? <- Part { src: r49, offset: 0, size: 1 }
         r51: ? <- SetReturnValue(r50)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r15, r43, r44, r45, r46, r47, r48, r49, r50, r51]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  53 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r44: ? <- ArithK(Add, r11, 32)
         r45: ? <- LoadMem { addr: r44, size: 1 }
         r51: ? <- SetReturnValue(r45)



T0: {
  ;
  return [pre:RSP + 32]:1
}
